fix image overlap on mobile

--- a/openatlas_website/static/css/style.css
+++ b/openatlas_website/static/css/style.css
@@ -1,74 +1,77 @@
 @font-face {
-  font-family: 'Poppins';
-  font-style: normal;
-  src: url(../fonts/Poppins-Regular.ttf) format('truetype');
+    font-family: 'Poppins';
+    font-style: normal;
+    src: url(../fonts/Poppins-Regular.ttf) format('truetype');
 }
 
 body {
-  font-family: "Poppins";
-  overflow-y: scroll;
+    font-family: "Poppins";
+    overflow-y: scroll;
 }
 
 a, a.img, a.without-decoration {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 p {
-  line-height: 180%;
+    line-height: 180%;
 }
 
 
 #twitter-logo, #facebook-logo {
-  width: 24px;
-  margin-left: 0.4em;
+    width: 24px;
+    margin-left: 0.4em;
 }
 
 span.news-teaser {
-  color: #111111;
-  padding: 0.2em 0.4em;
-  font-weight: bold;
-  border-radius: 4px;
-  background-color: #919D47;
+    color: #111111;
+    padding: 0.2em 0.4em;
+    font-weight: bold;
+    border-radius: 4px;
+    background-color: #919D47;
 }
 
 img.team {
-  max-width: 140px;
+    max-width: 140px;
 }
 
 #logo {
-  height: 75px;
+    height: 75px;
 }
 
 .screenshot {
-  margin-right: 1em;
-  margin-top: 0.5em;
-  max-width: 400px;
+    margin-right: 1em;
+    margin-top: 0.5em;
+    max-width: 400px;
 }
 
 .projects {
-  margin-bottom: 0.5em;
-  padding-right: 1.5em;
+    margin-bottom: 0.5em;
+    padding-right: 1.5em;
 }
 
 .projects img {
-  max-width: 240px;
-  max-height: 140px;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  padding-right: 1em;
+    max-width: 240px;
+    max-height: 140px;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    padding-right: 1em;
+    width: 100%;
+    object-fit: contain;
 }
 
 
-img.projects-institutes  {
-  max-height: 40px;
-  margin-right: 1.5em;
-  margin-top: 1em;
+img.projects-institutes {
+    max-height: 40px;
+    margin-right: 1.5em;
+    margin-top: 1em;
 }
 
 .image-license {
-  color: #999999;
-  font-size: 0.6em;
-  margin-top: 0.5em;
-  margin-bottom: 1.5em;
+    color: #999999;
+    font-size: 0.6em;
+    margin-top: 0.5em;
+    margin-bottom: 1.5em;
 }
 
 .blueimp-gallery > .prev,
@@ -81,29 +84,31 @@ img.projects-institutes  {
 .blueimp-gallery > .close,
 .blueimp-gallery > .title,
 .blueimp-gallery > .play-pause {
-  display: block;
+    display: block;
 }
 
-.dark{
-  background-color: #111111;
-  color:white;
+.dark {
+    background-color: #111111;
+    color: white;
 }
+
 .dark a:not(.btn) {
-  color:white;
-}
-.whole-length{
-  box-shadow: 0 0 0 100vmax #111111;
-  clip-path: inset(0 -100vmax);
+    color: white;
 }
 
-.text-oagreen{
-  color:#919D47;
+.whole-length {
+    box-shadow: 0 0 0 100vmax #111111;
+    clip-path: inset(0 -100vmax);
 }
 
-.shadow{
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+.text-oagreen {
+    color: #919D47;
 }
 
-.fs-7{
-  font-size: 0.8rem!important;
+.shadow {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.fs-7 {
+    font-size: 0.8rem !important;
 }
